# ArucoMarker

./: CMakeLists.txt  README.md  camera.yaml  main.cpp
